# CTIntegrate

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Gtest-Cmake  Makefile  cmake_install.cmake  compile_commands.json  cpptest-coverage.cmake  tcp_server  tcp_server.cpp
.build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  timer
.build/.cpptest/: cpptestcov-compute.log.1  cpptestcov-compute.log.2  cpptestcov-index.log.1  cpptestcov-report-html.log.1  cpptestcov-report-mcdc-table.log.1  cpptestcov-report-stats-txt.log.1  cpptestcov-suppress.log.1  xtest.diagnostics.txt
.build/Testing/Temporary/: CTestCostData.txt
.build/cpptest-coverage/Gtest-Cmake/: Gtest-Cmake.clog
.build/cpptest-runtime/: CMakeCache.txt  ImportCpptestRuntime.cmake  Makefile  cmake_install.cmake
.coverage/: 1ffab2f3.cov  79252a8f.cov  9dea7548.cov  coverage.html  coverage.index  dc54fb6d.cov
.cpptest/: cpptest.log.1  cpptest.log.2  cpptest.log.3  cpptestcov-compute.log.1  cpptestcov-compute.log.2  cpptestcov-compute.log.3  cpptestcov-compute.log.4  cpptestcov-compute.log.5  cpptestcov-index.log.1
.cpptest/com.parasoft.xtest.common.telemetry/: cache.properties
.cpptest/com.parasoft.xtest.cpp.launcher/bundle1/: bundle.info
.cpptest/com.parasoft.xtest.cpp.launcher/bundle10/: bundle.info
.github/workflows/: main.yml
Testing/Temporary/: CTestCostData.txt
cpptest-runtime/: CMakeCache.txt  ImportCpptestRuntime.cmake  Makefile  cmake_install.cmake
test/: CMakeLists.txt
test/testfoo/: CMakeLists.txt
(+114 files in other folders)
